--- a/MvcMovie.test/MvcMovie.test.csproj
+++ b/MvcMovie.test/MvcMovie.test.csproj
@@ -154,6 +154,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804261830023_Initial.cs" />
+    <Compile Include="Migrations\201804261830023_Initial.Designer.cs">
+      <DependentUpon>201804261830023_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804261846258_Rating.cs" />
+    <Compile Include="Migrations\201804261846258_Rating.Designer.cs">
+      <DependentUpon>201804261846258_Rating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -230,6 +239,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201804261830023_Initial.resx">
+      <DependentUpon>201804261830023_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804261846258_Rating.resx">
+      <DependentUpon>201804261846258_Rating.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
